Promises made generic

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -6,9 +6,15 @@
     <Compile Include="../Shared/Shared.fs" />
     <Compile Include="UserModel.fs" />
     <Compile Include="ViewUtil.fs" />
+    <Compile Include="PromiseSender.fs" />
     <Compile Include="Decoders.fs" />
     <Compile Include="Sign.fs" />
+    <Compile Include="Login.fs" />
     <Compile Include="Client.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Thoth.Elmish.FormBuilder" Version="0.2.0" />
+    <PackageReference Include="Thoth.Elmish.FormBuilder.BasicFields" Version="0.1.2" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
