--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="../Shared/Shared.fs" />
     <Compile Include="Config.fs" />
     <Compile Include="EmailSender.fs" />
+    <Compile Include="AzureHandler.fs" />
     <Compile Include="DbHandler.fs" />
     <Compile Include="Models.fs" />
     <Compile Include="JsonHelper.fs" />
